<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/easy_ground1"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1">

        <include layout="@layout/ip_port"/>


    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/tab_background">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">
            <Button
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="@drawable/tap_alarm"
                android:onClick="tb1"
                tools:ignore="UsingOnClickInXml" />
            <TextView
                android:layout_width="32dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/tab_text"
                android:textStyle="bold"
                android:text="@string/tab1"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">
            <Button
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="@drawable/tap_temp"
                android:onClick="tb2"
                tools:ignore="UsingOnClickInXml"/>
            <TextView
                android:layout_width="32dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/tab_text"
                android:textStyle="bold"
                android:text="@string/tab2"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">
            <Button
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="@drawable/tap_sec"
                android:onClick="tb3"
                tools:ignore="UsingOnClickInXml"
                />
            <TextView
                android:layout_width="32dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/tab_text"
                android:textStyle="bold"
                android:text="@string/tab3"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="@drawable/ic_baseline_account_circle_25"/>
            <TextView
                android:layout_width="32dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/tab_text"
                android:textStyle="bold"
                android:text="@string/tab4"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>